# audio-swedish

./: .gitignore  main.py  makefile  pyproject.toml
finetune/: config.yaml  finetune.ipynb  finetune.py  finetune_better.ipynb  finetune_rixvox.ipynb
handle_dataset/: get_info.ipynb  handle.ipynb  tokenize_hf_dataset.ipynb  tokenize_local_folder.ipynb  transform_to_parquet.ipynb
notebooks/: explore.ipynb  explore_dia.ipynb  orpheus_example.ipynb  orpheus_example_base_copy.ipynb  tokenise_speech_dataset.ipynb
tokenize_dataset/: tokenize_dataset.ipynb
