[project]
name = "audio-swedish"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "ipykernel>=6.30.1",
    "pip>=25.2",
    "soundfile>=0.13.1",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]
