[project]
name = "audio-swedish"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "ipykernel>=6.30.1",
    "ipywebrtc>=0.6.0",
    "ipywidgets>=8.1.7",
    "librosa>=0.11.0",
    "pip>=25.2",
    "snac>=1.2.1",
    "soundfile>=0.13.1",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]
